src/draft.output
State 17 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 38 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: seq

    2 seq: ε
    3    | seq stmt

    4 opt_e: ε
    5      | KW_E

    6 opt_eol: ε
    7        | ';'

    8 stmt: KW_PENSO ID KW_EH expr
    9     | KW_DIGO plist
   10     | KW_QST STR opt_e KW_GUARDO KW_EM ID
   11     | KW_CONS cond KW_ENTAO opt_eol seq KW_FIM
   12     | KW_CONS cond KW_ENTAO opt_eol seq KW_TALVEZ opt_eol seq KW_FIM
   13     | KW_CONT KW_ENQ cond opt_eol seq KW_FIM
   14     | ';'

   15 plist: expr
   16      | STR
   17      | plist '+' expr
   18      | plist '+' STR

   19 cond: expr
   20     | expr GT expr
   21     | expr GE expr
   22     | expr LT expr
   23     | expr LE expr
   24     | expr EQ expr
   25     | expr NE expr

   26 expr: NUM
   27     | ID
   28     | '(' expr ')'
   29     | expr '+' expr
   30     | expr '-' expr
   31     | expr '*' expr
   32     | expr '/' expr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 28
    ')' (41) 28
    '*' (42) 31
    '+' (43) 17 18 29
    '-' (45) 30
    '/' (47) 32
    ';' (59) 7 14
    error (256)
    NUM <ival> (258) 26
    ID <sval> (259) 8 10 27
    STR <sval> (260) 10 16 18
    KW_PENSO (261) 8
    KW_EH (262) 8
    KW_DIGO (263) 9
    KW_QST (264) 10
    KW_GUARDO (265) 10
    KW_EM (266) 10
    KW_CONS (267) 11 12
    KW_ENTAO (268) 11 12
    KW_TALVEZ (269) 12
    KW_FIM (270) 11 12 13
    KW_CONT (271) 13
    KW_ENQ (272) 13
    KW_E (273) 5
    GE (274) 21
    LE (275) 23
    EQ (276) 24
    NE (277) 25
    GT (278) 20
    LT (279) 22


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program <nptr> (33)
        on left: 1
        on right: 0
    seq <nptr> (34)
        on left: 2 3
        on right: 1 3 11 12 13
    opt_e (35)
        on left: 4 5
        on right: 10
    opt_eol (36)
        on left: 6 7
        on right: 11 12 13
    stmt <nptr> (37)
        on left: 8 9 10 11 12 13 14
        on right: 3
    plist <nptr> (38)
        on left: 15 16 17 18
        on right: 9 17 18
    cond <nptr> (39)
        on left: 19 20 21 22 23 24 25
        on right: 11 12 13
    expr <nptr> (40)
        on left: 26 27 28 29 30 31 32
        on right: 8 15 17 19 20 21 22 23 24 25 28 29 30 31 32


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (seq)

    program  go to state 1
    seq      go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: seq •
    3 seq: seq • stmt

    KW_PENSO  shift, and go to state 4
    KW_DIGO   shift, and go to state 5
    KW_QST    shift, and go to state 6
    KW_CONS   shift, and go to state 7
    KW_CONT   shift, and go to state 8
    ';'       shift, and go to state 9

    $default  reduce using rule 1 (program)

    stmt  go to state 10


State 3

    0 $accept: program $end •

    $default  accept


State 4

    8 stmt: KW_PENSO • ID KW_EH expr

    ID  shift, and go to state 11


State 5

    9 stmt: KW_DIGO • plist

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    STR  shift, and go to state 14
    '('  shift, and go to state 15

    plist  go to state 16
    expr   go to state 17


State 6

   10 stmt: KW_QST • STR opt_e KW_GUARDO KW_EM ID

    STR  shift, and go to state 18


State 7

   11 stmt: KW_CONS • cond KW_ENTAO opt_eol seq KW_FIM
   12     | KW_CONS • cond KW_ENTAO opt_eol seq KW_TALVEZ opt_eol seq KW_FIM

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    '('  shift, and go to state 15

    cond  go to state 19
    expr  go to state 20


State 8

   13 stmt: KW_CONT • KW_ENQ cond opt_eol seq KW_FIM

    KW_ENQ  shift, and go to state 21


State 9

   14 stmt: ';' •

    $default  reduce using rule 14 (stmt)


State 10

    3 seq: seq stmt •

    $default  reduce using rule 3 (seq)


State 11

    8 stmt: KW_PENSO ID • KW_EH expr

    KW_EH  shift, and go to state 22


State 12

   26 expr: NUM •

    $default  reduce using rule 26 (expr)


State 13

   27 expr: ID •

    $default  reduce using rule 27 (expr)


State 14

   16 plist: STR •

    $default  reduce using rule 16 (plist)


State 15

   28 expr: '(' • expr ')'

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    '('  shift, and go to state 15

    expr  go to state 23


State 16

    9 stmt: KW_DIGO plist •
   17 plist: plist • '+' expr
   18      | plist • '+' STR

    '+'  shift, and go to state 24

    $default  reduce using rule 9 (stmt)


State 17

   15 plist: expr •
   29 expr: expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    '+'       [reduce using rule 15 (plist)]
    $default  reduce using rule 15 (plist)


State 18

   10 stmt: KW_QST STR • opt_e KW_GUARDO KW_EM ID

    KW_E  shift, and go to state 29

    $default  reduce using rule 4 (opt_e)

    opt_e  go to state 30


State 19

   11 stmt: KW_CONS cond • KW_ENTAO opt_eol seq KW_FIM
   12     | KW_CONS cond • KW_ENTAO opt_eol seq KW_TALVEZ opt_eol seq KW_FIM

    KW_ENTAO  shift, and go to state 31


State 20

   19 cond: expr •
   20     | expr • GT expr
   21     | expr • GE expr
   22     | expr • LT expr
   23     | expr • LE expr
   24     | expr • EQ expr
   25     | expr • NE expr
   29 expr: expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr

    GE   shift, and go to state 32
    LE   shift, and go to state 33
    EQ   shift, and go to state 34
    NE   shift, and go to state 35
    GT   shift, and go to state 36
    LT   shift, and go to state 37
    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 19 (cond)


State 21

   13 stmt: KW_CONT KW_ENQ • cond opt_eol seq KW_FIM

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    '('  shift, and go to state 15

    cond  go to state 38
    expr  go to state 20


State 22

    8 stmt: KW_PENSO ID KW_EH • expr

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    '('  shift, and go to state 15

    expr  go to state 39


State 23

   28 expr: '(' expr • ')'
   29     | expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28
    ')'  shift, and go to state 40


State 24

   17 plist: plist '+' • expr
   18      | plist '+' • STR

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    STR  shift, and go to state 41
    '('  shift, and go to state 15

    expr  go to state 42


State 25

   29 expr: expr '+' • expr

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    '('  shift, and go to state 15

    expr  go to state 43


State 26

   30 expr: expr '-' • expr

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    '('  shift, and go to state 15

    expr  go to state 44


State 27

   31 expr: expr '*' • expr

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    '('  shift, and go to state 15

    expr  go to state 45


State 28

   32 expr: expr '/' • expr

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    '('  shift, and go to state 15

    expr  go to state 46


State 29

    5 opt_e: KW_E •

    $default  reduce using rule 5 (opt_e)


State 30

   10 stmt: KW_QST STR opt_e • KW_GUARDO KW_EM ID

    KW_GUARDO  shift, and go to state 47


State 31

   11 stmt: KW_CONS cond KW_ENTAO • opt_eol seq KW_FIM
   12     | KW_CONS cond KW_ENTAO • opt_eol seq KW_TALVEZ opt_eol seq KW_FIM

    ';'  shift, and go to state 48

    ';'       [reduce using rule 6 (opt_eol)]
    $default  reduce using rule 6 (opt_eol)

    opt_eol  go to state 49


State 32

   21 cond: expr GE • expr

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    '('  shift, and go to state 15

    expr  go to state 50


State 33

   23 cond: expr LE • expr

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    '('  shift, and go to state 15

    expr  go to state 51


State 34

   24 cond: expr EQ • expr

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    '('  shift, and go to state 15

    expr  go to state 52


State 35

   25 cond: expr NE • expr

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    '('  shift, and go to state 15

    expr  go to state 53


State 36

   20 cond: expr GT • expr

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    '('  shift, and go to state 15

    expr  go to state 54


State 37

   22 cond: expr LT • expr

    NUM  shift, and go to state 12
    ID   shift, and go to state 13
    '('  shift, and go to state 15

    expr  go to state 55


State 38

   13 stmt: KW_CONT KW_ENQ cond • opt_eol seq KW_FIM

    ';'  shift, and go to state 48

    ';'       [reduce using rule 6 (opt_eol)]
    $default  reduce using rule 6 (opt_eol)

    opt_eol  go to state 56


State 39

    8 stmt: KW_PENSO ID KW_EH expr •
   29 expr: expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 8 (stmt)


State 40

   28 expr: '(' expr ')' •

    $default  reduce using rule 28 (expr)


State 41

   18 plist: plist '+' STR •

    $default  reduce using rule 18 (plist)


State 42

   17 plist: plist '+' expr •
   29 expr: expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr

    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 17 (plist)


State 43

   29 expr: expr • '+' expr
   29     | expr '+' expr •
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr

    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 29 (expr)


State 44

   29 expr: expr • '+' expr
   30     | expr • '-' expr
   30     | expr '-' expr •
   31     | expr • '*' expr
   32     | expr • '/' expr

    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 30 (expr)


State 45

   29 expr: expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   31     | expr '*' expr •
   32     | expr • '/' expr

    $default  reduce using rule 31 (expr)


State 46

   29 expr: expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr
   32     | expr '/' expr •

    $default  reduce using rule 32 (expr)


State 47

   10 stmt: KW_QST STR opt_e KW_GUARDO • KW_EM ID

    KW_EM  shift, and go to state 57


State 48

    7 opt_eol: ';' •

    $default  reduce using rule 7 (opt_eol)


State 49

   11 stmt: KW_CONS cond KW_ENTAO opt_eol • seq KW_FIM
   12     | KW_CONS cond KW_ENTAO opt_eol • seq KW_TALVEZ opt_eol seq KW_FIM

    $default  reduce using rule 2 (seq)

    seq  go to state 58


State 50

   21 cond: expr GE expr •
   29 expr: expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 21 (cond)


State 51

   23 cond: expr LE expr •
   29 expr: expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 23 (cond)


State 52

   24 cond: expr EQ expr •
   29 expr: expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 24 (cond)


State 53

   25 cond: expr NE expr •
   29 expr: expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 25 (cond)


State 54

   20 cond: expr GT expr •
   29 expr: expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 20 (cond)


State 55

   22 cond: expr LT expr •
   29 expr: expr • '+' expr
   30     | expr • '-' expr
   31     | expr • '*' expr
   32     | expr • '/' expr

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26
    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 22 (cond)


State 56

   13 stmt: KW_CONT KW_ENQ cond opt_eol • seq KW_FIM

    $default  reduce using rule 2 (seq)

    seq  go to state 59


State 57

   10 stmt: KW_QST STR opt_e KW_GUARDO KW_EM • ID

    ID  shift, and go to state 60


State 58

    3 seq: seq • stmt
   11 stmt: KW_CONS cond KW_ENTAO opt_eol seq • KW_FIM
   12     | KW_CONS cond KW_ENTAO opt_eol seq • KW_TALVEZ opt_eol seq KW_FIM

    KW_PENSO   shift, and go to state 4
    KW_DIGO    shift, and go to state 5
    KW_QST     shift, and go to state 6
    KW_CONS    shift, and go to state 7
    KW_TALVEZ  shift, and go to state 61
    KW_FIM     shift, and go to state 62
    KW_CONT    shift, and go to state 8
    ';'        shift, and go to state 9

    stmt  go to state 10


State 59

    3 seq: seq • stmt
   13 stmt: KW_CONT KW_ENQ cond opt_eol seq • KW_FIM

    KW_PENSO  shift, and go to state 4
    KW_DIGO   shift, and go to state 5
    KW_QST    shift, and go to state 6
    KW_CONS   shift, and go to state 7
    KW_FIM    shift, and go to state 63
    KW_CONT   shift, and go to state 8
    ';'       shift, and go to state 9

    stmt  go to state 10


State 60

   10 stmt: KW_QST STR opt_e KW_GUARDO KW_EM ID •

    $default  reduce using rule 10 (stmt)


State 61

   12 stmt: KW_CONS cond KW_ENTAO opt_eol seq KW_TALVEZ • opt_eol seq KW_FIM

    ';'  shift, and go to state 48

    ';'       [reduce using rule 6 (opt_eol)]
    $default  reduce using rule 6 (opt_eol)

    opt_eol  go to state 64


State 62

   11 stmt: KW_CONS cond KW_ENTAO opt_eol seq KW_FIM •

    $default  reduce using rule 11 (stmt)


State 63

   13 stmt: KW_CONT KW_ENQ cond opt_eol seq KW_FIM •

    $default  reduce using rule 13 (stmt)


State 64

   12 stmt: KW_CONS cond KW_ENTAO opt_eol seq KW_TALVEZ opt_eol • seq KW_FIM

    $default  reduce using rule 2 (seq)

    seq  go to state 65


State 65

    3 seq: seq • stmt
   12 stmt: KW_CONS cond KW_ENTAO opt_eol seq KW_TALVEZ opt_eol seq • KW_FIM

    KW_PENSO  shift, and go to state 4
    KW_DIGO   shift, and go to state 5
    KW_QST    shift, and go to state 6
    KW_CONS   shift, and go to state 7
    KW_FIM    shift, and go to state 66
    KW_CONT   shift, and go to state 8
    ';'       shift, and go to state 9

    stmt  go to state 10


State 66

   12 stmt: KW_CONS cond KW_ENTAO opt_eol seq KW_TALVEZ opt_eol seq KW_FIM •

    $default  reduce using rule 12 (stmt)
